--- a/docker/Dockerfile.linux.arm64
+++ b/docker/Dockerfile.linux.arm64
@@ -9,4 +9,4 @@ ENV GODEBUG netdns=go
 COPY --from=alpine /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 
 ADD release/linux/arm64/drone-jsonnet-config /bin/
-ENTRYPOINT ["/bin/drone-vault"]
+ENTRYPOINT ["/bin/drone-jsonnet-config"]
