--- a/docker/Dockerfile.linux.arm64
+++ b/docker/Dockerfile.linux.arm64
@@ -1,12 +1,14 @@
-FROM alpine:3.6 as alpine
-RUN apk add -U --no-cache ca-certificates
+FROM alpine:3.9
 
-FROM alpine:3.6
+LABEL maintainer="Drone.IO Community <drone-dev@googlegroups.com>" \
+  org.label-schema.name="Drone Jsonnet Config" \
+  org.label-schema.vendor="Drone.IO Community" \
+  org.label-schema.schema-version="1.0"
+
 EXPOSE 3000
-
 ENV GODEBUG netdns=go
 
-COPY --from=alpine /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
+RUN apk add --no-cache ca-certificates
 
 ADD release/linux/arm64/drone-jsonnet-config /bin/
 ENTRYPOINT ["/bin/drone-jsonnet-config"]
